--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -38,6 +38,8 @@ under the License.
         >
       <% end %>
     <% end %>
+    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net/css?family=poppins:300,400" rel="stylesheet" />
     <title><%= current_page.data.title || "API Documentation" %></title>
 
     <style media="screen">
